avoid crazy canvas on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,8 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
+
+  font-size: large;
 }
 
 .App {
@@ -60,6 +62,7 @@ button {
   width: 15vw;
   height: 3.5vh;
   border-radius: 8px;
+  font-size: large;
 
   @media screen and (max-width: 650px) {
     width: 40vw;
@@ -67,9 +70,19 @@ button {
   }
 }
 
+.menu {
+  height: 6vh;
+  font-size: larger;
+}
+
+.canvaswrap {
+  touch-action: none;
+}
+
 input {
   width: 20vw;
   height: 3vh;
+  font-size: large;
 
   @media screen and (max-width: 650px) {
     width: 90%;
